1107 마리아 DB 연동 완료 테스트 성공

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,14 +1,23 @@
 {{>layout/header}}
 <h1>스프링 부트로 시작하는 웹 서비스 Ver.2</h1>
 <div class="col-md-12">
+<!--로그인 기능 영역-->
 <div class="row">
 <div class="col-md-6">
 <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+{{#userName}} <!--해당 값이 존재한다면 #를 사용 로그인 이후 화면이 노출됨-->
+<span id="user">{{userName}}</span>님 환영합니다.
+<a href="/logout" class="btn btn-info active" role="button">로그아웃</a> <!--스프링 시큐리티에서 기본적으로 제공하는 로그아웃 URL, 개발자가 별도로 로그아웃 컨트롤러를 만들 필요가 없음. URL 변경이 가능하지만 안하는게 좋음(협업 관례상)-->
+{{/userName}}
+
+{{^userName}} <!--값이 없으면 ^를 사용, 그래서 로그인 버튼이 노출됨-->
+<a href="/oauth2/authorization/google" class="btn btn-success active" role="button">구글 로그인</a> <!--스프링 시큐리티에서 기본적으로 제공하는 로그인 URL 로그아웃 URL과 마찬가지로 개발자가 별도의 컨트롤러를 생성할 필요가 없음-->
+<a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">네이버 로그인</a>
+{{/userName}}
 </div>
 </div>
 <br>
 <!--목록 출력 영역-->
-
 <table class="table table-horizontal table-bordered">
 <thead class="thead-strong">
 <tr>
