--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -5,5 +5,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
 </head>
 <body>
