--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,7 +1,8 @@
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <!--index.js 추가-->
-<script src="/js/app/index.js"></script>
+<script src="/static/js/app/index.js"></script>
 </body>
 </html>
